--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "cmdk": "^1.1.1",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
+    "express": "^5.1.0",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.12.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
-    "motion": "^10.0.0",
+    "motion": "^10.18.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
